# mobat

./: .gitignore  CMakeLists.txt  README.md  address.hpp  main.cpp  mobat_packet.cpp  mobat_packet.hpp  packet.hpp  socket.cpp  socket.hpp  ttt.sublime-project
Emitter_Locator/: CMakeLists.txt  default.conf  small_children.conf  ttt.sublime-project
Emitter_Locator/include/locator/: buffer_collection.hpp  locator.hpp  microphone.hpp  tdoator.hpp
Emitter_Locator/include/recorder/: config.hpp  recorder.hpp
Emitter_Locator/include/signaltrans/: FFT_Transformer.h  Signal_Analyzer.h  fft_transformer.h  signal_analyzer.h
Emitter_Locator/include/testing/: test.h  testMapEntry.hpp
Emitter_Locator/include/visualization/: Ball.h  Drawable_Object.h  Microphone_Object.h  Recognized_Token_Object.h  Table_Object.h  Table_Visualizer.h  configurator.hpp  drawable_object.h  microphone.hpp  microphone_object.h  points.h  score.h  score.hpp  table.hpp  table_visualizer.hpp  token.hpp
Emitter_Locator/pictures/: blue_wins.xcf  red_wins.xcf
Emitter_Locator/shaders/: fragment_shader.frag  vertex_shader.vert
Emitter_Locator/src/: locate.cpp  sigtrans.cpp  ttt.cpp  visualization.cpp
Emitter_Locator/src/locator/: buffer_collection.cpp  locator.cpp  locator.hpp  microphone.cpp  tdoator.cpp
Emitter_Locator/src/recorder/: config.cpp  recorder.cpp
Emitter_Locator/src/signaltrans/: FFT_Transformer.cpp  Signal_Analyzer.cpp  fft_transformer.cpp  signal_analyzer.cpp
Emitter_Locator/src/table_plot/: svg_plot_generator.cpp  svg_plot_header.head
Emitter_Locator/src/testing/: test.cpp
Emitter_Locator/src/visualization/: Ball.cpp  Drawable_Object.cpp  Microphone_Object.cpp  Recognized_Token_Object.cpp  Table_Object.cpp  Table_Visualizer.cpp  configurator.cpp  drawable_object.cpp  microphon.cpp  microphon_object.cpp  points.cpp  score.cpp  table.cpp  table_visualizer.cpp  token.cpp
MoBat_Sine_Emitter/app/src/main/: AndroidManifest.xml
Signal_Transform/: Makefile  fft_notes
Signal_Transform/include/: FFT_Transformer.h  ring_buffer.h
Signal_Transform/src/: FFT_Transformer.cpp  SignalTransform  main.cpp  ring_buffer.cpp  visualizer_main.cpp
TTT_Sine_Emitter/app/: build.gradle
TTT_Sine_Emitter/app/src/main/: AndroidManifest.xml
Table_Vis/: Makefile
Table_Vis/include/: Drawable_Object.h  Microphone_Object.h  Recognized_Token_Object.h  Structs.h  Table_Object.h  Table_Visualizer.h
Table_Vis/src/: Microphone_Object.cpp  Recognized_Token_Object.cpp  Table_Object.cpp  Table_Visualizer.cpp  main.cpp
WikiPictures/Test_Frequency_Plots/: TableTemplate.xcf
WikiPictures/Test_Frequency_Plots/Nexus4_1Mic/18khz/: spectrum_18khz_field0.txt  spectrum_18khz_field1.txt  spectrum_18khz_field2.txt  spectrum_18khz_field3.txt  spectrum_18khz_field4.txt  spectrum_18khz_field5.txt  spectrum_18khz_field6.txt  spectrum_18khz_field7.txt
WikiPictures/Test_Frequency_Plots/Nexus4_1Mic/20.1khz/: spectrum_20.1khz_field0.txt  spectrum_20.1khz_field1.txt  spectrum_20.1khz_field2.txt  spectrum_20.1khz_field3.txt  spectrum_20.1khz_field4.txt  spectrum_20.1khz_field5.txt  spectrum_20.1khz_field6.txt  spectrum_20.1khz_field7.txt
WikiPictures/Test_Frequency_Plots/Nexus4_1Mic/21.1khz/: spectrum_21.1khz_field0.txt  spectrum_21.1khz_field1.txt  spectrum_21.1khz_field2.txt  spectrum_21.1khz_field3.txt  spectrum_21.1khz_field4.txt  spectrum_21.1khz_field5.txt  spectrum_21.1khz_field6.txt  spectrum_21.1khz_field7.txt
WikiPictures/Test_Frequency_Plots/Nexus4_1Mic/22khz/: spectrum_22khz_field0.txt  spectrum_22khz_field1.txt  spectrum_22khz_field2.txt  spectrum_22khz_field3.txt  spectrum_22khz_field4.txt  spectrum_22khz_field5.txt  spectrum_22khz_field6.txt  spectrum_22khz_field7.txt
WikiPictures/Test_Frequency_Plots/Nexus4_1Pickup/18khz/: spectrum_18khz_field0.txt  spectrum_18khz_field1.txt  spectrum_18khz_field2.txt  spectrum_18khz_field3.txt  spectrum_18khz_field4.txt  spectrum_18khz_field5.txt  spectrum_18khz_field6.txt  spectrum_18khz_field7.txt
WikiPictures/Test_Frequency_Plots/Nexus4_1Pickup/20.1khz/: spectrum_20.1khz_field0.txt  spectrum_20.1khz_field1.txt  spectrum_20.1khz_field2.txt  spectrum_20.1khz_field3.txt  spectrum_20.1khz_field4.txt  (+3 more)
include/: config.hpp  device.hpp  recorder.hpp
include/recorder/: device.hpp
include/signaltrans/: ring_buffer.h
include/visualization/: Drawable_Object.h
mobat/: CMakeLists.txt  default.conf  default_server.conf  default_server_config.conf  freqs.txt  networking_example.cpp
mobat/configuration/: default_airhockey.conf  default_server.conf
mobat/include/airhockey/: airhockey.hpp  game.hpp
mobat/include/locator/: buffer_collection.hpp  locator.hpp
mobat/include/logging/: logger_map_entry.hpp  token_position_logger.hpp
mobat/include/mobat_server/: mobat_server.hpp
mobat/include/recorder/: config.hpp  device.hpp  recorder.hpp
mobat/include/signaltrans/: fft_transformer.h  signal_analyzer.h
mobat/include/testing/: test.h  testMapEntry.hpp
mobat/include/udp_receiver/: udp_receiver.hpp
mobat/include/visualization/: configurator.hpp  drawable_object.hpp  microphone.hpp  score.hpp  table.hpp  table_visualizer.hpp  token.hpp
mobat/networking/: address.hpp  packet.hpp  receiver.hpp  socket.cpp  token_packet.hpp  token_position.hpp
mobat/pictures/: blue_wins.xcf
mobat/src/: airhockey.cpp  mobat_localizer.cpp  networking_example.cpp  ttt.cpp  visualization.cpp
mobat/src/airhockey/: airhockey.cpp  game.cpp
mobat/src/locator/: locator.cpp  tdoator.cpp
mobat/src/logging/: token_position_logger.cpp
mobat/src/mobat_server/: mobat_server.cpp
mobat/src/signaltrans/: fft_transformer.cpp  signal_analyzer.cpp
mobat/src/testing/: test.cpp
mobat/src/udp_receiver/: udp_receiver.cpp
mobat/src/visualization/: drawable_object.cpp  microphone.cpp  score.cpp  table.cpp  table_visualizer.cpp  token.cpp
src/: config.cpp  recorder.cpp  sigtrans.cpp  ttt.cpp  visualization.cpp
src/recorder/: config.cpp  recorder.cpp
src/signaltrans/: ring_buffer.cpp
src/visualization/: Recognized_Token_Object.cpp  Table_Object.cpp  Table_Visualizer.cpp
(+152 files in other folders)
